[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
description = "A Rusty sdk for the Algorand blockchain."
documentation = "https://docs.rs/algonaut"
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.2.0"

# SGX: examples not ported
autoexamples = false

# SGX: tests not ported
[lib]
test = false
doctest = false
bench = false

[workspace]
members = [
  # (SGX: not ported) "algonaut_client",
  "algonaut_core",
  "algonaut_crypto",
  "algonaut_encoding",
  "algonaut_transaction",
]

[dependencies]
# (SGX: not ported) algonaut_client = {path = "algonaut_client", version = "0.2.0"}
algonaut_core = {path = "algonaut_core", version = "0.2.0"}
algonaut_crypto = {path = "algonaut_crypto", version = "0.2.0"}
algonaut_encoding = {path = "algonaut_encoding", version = "0.2.0"}
algonaut_transaction = {path = "algonaut_transaction", version = "0.2.0"}

[dev-dependencies]
chrono = "0.4.9"
dirs = "2.0"
dotenv = "0.15.0"
# (SGX: skip) rmp-serde = "0.14.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
