[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>", "Ivan Schuetz <ivanhp978@gmail.com>",]
description = "A Rusty sdk for the Algorand blockchain."
documentation = "https://docs.rs/algonaut"
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.3.0"

# SGX: examples not ported
autoexamples = false
autotests = false

# SGX: tests not ported
[lib]
test = false
doctest = false
bench = false

[workspace]
members = [
  # (SGX: not ported) "algonaut_client",
  # (SGX: not ported) "algonaut_model",
  "algonaut_core",
  "algonaut_crypto",
  "algonaut_encoding",
  "algonaut_transaction",
]

[dependencies]
# (SGX: not ported) algonaut_client = {path = "algonaut_client", version = "0.3.0"}
# (SGX: not ported) algonaut_model = {path = "algonaut_model", version = "0.3.0"}
algonaut_core = {path = "algonaut_core", version = "0.3.0"}
algonaut_crypto = {path = "algonaut_crypto", version = "0.3.0"}
algonaut_encoding = {path = "algonaut_encoding", version = "0.3.0"}
algonaut_transaction = {path = "algonaut_transaction", version = "0.3.0"}
# (SGX: not used here) thiserror = "1.0.23"
# (SGX: not used here) rmp-serde = "0.15.5"

[dev-dependencies]
chrono = "0.4.9"
dirs = "3.0"
dotenv = "0.15.0"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
rand = "0.8.3"
getrandom = { version = "0.2.2", features = ["js"] }
data-encoding = { version = "2.3.1", default-features = false }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
