[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
description = "Core structs for the Algorand blockchain."
documentation = "https://docs.rs/algonaut_core"
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_core"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.2.0"

[dependencies]
algonaut_crypto = {path = "../algonaut_crypto", version = "0.2.0"}
algonaut_encoding = {path = "../algonaut_encoding", version = "0.2.0"}
data-encoding = {version = "2.3.1", default-features = false}
serde = {version = "1.0", features = ["derive"], git = "https://github.com/mesalock-linux/serde-sgx"}
sha2 = {version = "0.8.0", default-features = false}
static_assertions = "0.3.4"

sgx_tstd = {git = "https://github.com/apache/teaclave-sgx-sdk.git"}
