[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>", "Ivan Schuetz <ivanhp978@gmail.com>",]
description = "Crypto utilities for the Algorand blockchain."
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_crypto"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.3.0"

# SGX: tests not ported
[lib]
test = false
bench = false

[dependencies]
algonaut_encoding = { path = "../algonaut_encoding", version = "0.3.0" }
data-encoding = { version = "2.3.1", default-features = false }
derive_more = { version = "0.99.13", default-features = false, features = ["display", "from"] }
indexmap = { version = "1.6.1", git = "https://github.com/mesalock-linux/indexmap-sgx" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
serde = { version = "1.0", features = ["derive"], git = "https://github.com/mesalock-linux/serde-sgx" }
sha2 = { version = "0.9.5", default-features = false }
static_assertions = "1.1.0"
thiserror = { version = "1.0.9", git = "https://github.com/mesalock-linux/thiserror-sgx" }
ring = { version = "0.16.19", git = "https://github.com/mesalock-linux/ring-sgx" }

sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
