[package]
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>", "Ivan Schuetz <ivanhp978@gmail.com>",]
description = "Encoding utilities for the Algorand blockchain."
documentation = "https://docs.rs/algonaut_encoding"
edition = "2018"
keywords = ["Algorand", "sdk"]
license = "MIT"
name = "algonaut_encoding"
repository = "https://github.com/manuelmauro/algonaut"
version = "0.3.0"

# SGX: tests not ported
[lib]
test = false
bench = false

[dependencies]
data-encoding = { version = "2.3.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"], git = "https://github.com/mesalock-linux/serde-sgx" }

sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
